Fix Connect Button text wrapping

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -429,7 +429,7 @@ input[type="number"]::-webkit-inner-spin-button {
     font-size: 12px;
     font-weight: normal;
     text-shadow: 0 1px rgba(0, 0, 0, 0.25);
-    padding: 0 10px;
+    padding: 5px 12px;
 }
 
 .header-wrapper {
